Update to new physx version (#2069)
* update to new physx version

* update physx version

* portals text, clean up some functions, loading screen improvement, various fixes

* update physx again

--- a/packages/client-core/i18n/en/common.json
+++ b/packages/client-core/i18n/en/common.json
@@ -13,6 +13,7 @@
         "login": "Log In"
     },
     "loader": {
+        "connecting": "Connecting to world...",
         "entering": "Entering world...",
         "loading": "Loading...",
         "objectRemaining": "{{count}} object remaining",
