--- a/packages/client-core/i18n/en/editor.json
+++ b/packages/client-core/i18n/en/editor.json
@@ -313,11 +313,7 @@
             "lbl-toneMapping": "Tone Mapping",
             "info-toneMapping": "Enables tone mapping on the scene renderer. Has no effect when a post processing is enabled.",
             "lbl-toneMappingExposure": "Tone Mapping Exposure",
-            "info-toneMappingExposure": "Specifies the tone mapping exposure on the scene renderer. Has no effect when a post processing is enabled.",
-            "lbl-physicallyCorrectLights": "Physically Correct Lights",
-            "info-physicallyCorrectLights": "Enables cascading shadow maps.",
-            "lbl-outputEncoding": "Output Encoding",
-            "info-outputEncoding": "Defines the output encoding of the renderer. Default is LinearEncoding."
+            "info-toneMappingExposure": "Specifies the tone mapping exposure on the scene renderer. Has no effect when a post processing is enabled."
         },
         "sceneCamera": {
             "description": "The camera used to generate the thumbnail for your scene and the starting position for the preview camera in Hubs.",
