--- a/packages/client-core/i18n/en/editor.json
+++ b/packages/client-core/i18n/en/editor.json
@@ -131,6 +131,8 @@
             "info-controls": "Toggle the visibility of the media controls in Hubs.",
             "lbl-autoplay": "Auto Play",
             "info-autoplay": "If true, the media will play when first entering the scene.",
+            "lbl-synchronize": "Synchronize",
+            "info-synchronize": "If true, the media will be Synchronized on all the connected clients.",
             "lbl-loop": "Loop",
             "info-loop": "If true the media will loop indefinitely.",
             "lbl-audioType": "Audio Type",
