--- a/packages/client-core/i18n/en/social.json
+++ b/packages/client-core/i18n/en/social.json
@@ -63,7 +63,7 @@
         "dashboard": "Dashboard",
         "users": "Users",
         "feeds": "Feeds",
-        "arMedia": "Media",
+        "arMedia": "Video Media",
         "editor": "Editor"
     },
     "featured":{
