--- a/packages/client-core/i18n/en/editor.json
+++ b/packages/client-core/i18n/en/editor.json
@@ -198,6 +198,7 @@
         "model": {
             "description": "A 3D model in your scene, loaded from a GLTF URL or file.",
             "lbl-modelurl": "Model Url",
+            "lbl-textureOverride": "Override Texture",
             "error-url": "Error Loading From URL",
             "lbl-loopAnimation": "Loop Animation",
             "lbl-collidable": "Collidable",
