--- a/packages/social/i18n/en/editor.json
+++ b/packages/social/i18n/en/editor.json
@@ -197,6 +197,7 @@
             "lbl-modelurl": "Model Url",
             "error-url": "Error Loading From URL",
             "lbl-loopAnimation": "Loop Animation",
+            "lbl-isAvatar": "Is Avatar",
             "lbl-collidable": "Collidable",
             "lbl-saveColliders": "Save Colliders",
             "lbl-walkable": "Walkable",
