Finished avatars in content-packs.

--- a/packages/client-core/i18n/en/user.json
+++ b/packages/client-core/i18n/en/user.json
@@ -209,6 +209,7 @@
         "chats": "Chats",
         "content": "Content Packs",
         "scenes": "Scenes",
+        "avatars": "Avatars",
         "bots": "Bots"
     }
 }
