Added support for linking portals in editor (#2582)
* Portal animation changes

* Smooth transition in portal

* Smooth portal transition implemented

* Some bug fixes

* Formatting issue fix

* Added support for linking portals in editor

* Lint error fix

--- a/packages/client-core/i18n/en/editor.json
+++ b/packages/client-core/i18n/en/editor.json
@@ -394,6 +394,13 @@
         "spline": {
             "description": "Dynamically create and customize curves.",
             "lbl-addNode": "Add node to curve."
+        },
+        "portal": {
+            "description": "A Portat to teleport players to specified location",
+            "location": "Location",
+            "displayText": "Display Text",
+            "spawnPosition": "Spawn position",
+            "spawnRotation": "Spawn Rotation"
         }
     },
     "projects": {
